Corrected: p font too small on ipad pro

--- a/206-unplugged/css/main.css
+++ b/206-unplugged/css/main.css
@@ -322,9 +322,7 @@ article {
   align-items: center;
   flex-flow: row wrap;
   margin:0;
-
   text-align: center;
-  font-size:0.875em;
   color: #d8d9e0;
 }
 
